--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -12,7 +20,7 @@
       "package版本信息：\n",
       "numpy:       1.21.5\n",
       "pandas:      1.3.5\n",
-      "PyTorch:      1.2.0\n"
+      "PyTorch:      1.12.1\n"
      ]
     }
    ],
@@ -1882,24 +1890,24 @@
     "### RNN相关\n",
     "\n",
     "pytorch中RNN相关的支持分为三类：\n",
-    "1. `nn.RNNBase`，RNN的基础抽象类\n",
-    "2. RNN的单个Cell类，处理序列中的单独一步\n",
-    "  + `nn.RNNCell`\n",
-    "  + `nn.GRUCell`\n",
-    "  + `nn.LSTMCell`\n",
+    "1. `nn.RNNBase`，RNN的基础类\n",
+    "2. RNN的单个Cell类，处理序列中的**单独一步**\n",
+    "    + `nn.RNNCell`\n",
+    "    + `nn.GRUCell`\n",
+    "    + `nn.LSTMCell`\n",
     "3. RNN的单元封装类，处理整个序列，它是对RNN Cell类的封装，可以**构建多层RNN**\n",
-    "  + `nn.RNN`\n",
-    "  + `nn.GRU`\n",
-    "  + `nn.LSTM`\n",
+    "    + `nn.RNN`\n",
+    "    + `nn.GRU`\n",
+    "    + `nn.LSTM`\n",
     "\n",
     "\n",
-    "RNN处理的是序列数据，所以输入数据的维度中，多了一个 sequence 维度（或者叫 time_step ），所以输入的数据shape是 `(batch_size, seq_length, in_features)`。\n",
+    "RNN处理的是序列数据，所以**输入数据的维度中，多了一个 sequence 维度（或者叫 time_step ），所以输入的数据shape是 `(batch_size, seq_length, in_features)`。**\n",
     "\n",
     "+ 以文本处理为例：\n",
     "  + 一般将一个句子看做一个sequence，而句子中的每个单词都用一个词向量来表示，那么一个句子就是一个矩阵 $v \\times s$，$v$ 是词向量的长度——所有单词都是一样的，$s$ 是这个句子里单词的数量——一个序列的长度。  \n",
     "  + 但是文本中，不是所有的句子长度 $s$ 都是一样的，需要做进一步的处理 —— 选择最大的句子长度（或者平均长度）为准，所有的句子都规范化成这个长度，超过的部分截断，不足的部分单词补0——这个补充的单词0也对应于一个词向量，这样就得到了形状规范的一个 sequence 样本。   \n",
     "  + 每个 sequence 对于RNN 来说是一个样本，每次训练使用多个，也就是 batch_size。\n",
-    "  \n",
+    "\n",
     "\n",
     "+ pytorch中构建**一层**RNN的时候，需要配置的参数有如下几个：\n",
     "  + `in_features`——对应于输入层的节点数\n",
@@ -1909,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,59 +1925,117 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RNN(5, 3, bias=False, batch_first=True)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# 构建一个 单层、单向 RNN\n",
-    "# 需要设置的两个参数：输入特征数为5，隐藏层状态向量长度=3\n",
-    "# 由数据决定的两个参数：batch_size=2，序列长度=4\n",
-    "in_features = 5\n",
-    "hidden_size = 3\n",
-    "num_layers = 1\n",
-    "rnn_layer = nn.RNN(input_size=in_features, hidden_size=hidden_size, num_layers=num_layers, bidirectional=False, nonlinearity='relu', bias=False, batch_first=True)\n",
-    "rnn_layer"
+    "+ `RNNCell`的使用\n",
+    "\n",
+    "注意`RNNCell`只是一个RNN单元，也就是**只负责处理序列中的一步，所以它的输入没有 sequence 这个维度**。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size, input_size, hidden_size = 6, 16, 8\n",
+    "\n",
+    "rnn_cell = nn.RNNCell(input_size=input_size, hidden_size=hidden_size, bias=True, nonlinearity='tanh')\n",
+    "\n",
+    "# 输入为 batch_size, input_size，它不支持 sequence_size 这一维度\n",
+    "input_data = torch.randn(batch_size, input_size)\n",
+    "\n",
+    "# 输入的隐藏层初始状态向量，不输入时默认全=0, 它也有一个 batch_size，对应于每个样本的初始隐藏状态向量\n",
+    "hidden_init = torch.randn(batch_size, hidden_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 4, 5])"
+       "torch.Size([6, 8])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "output = rnn_cell(input_data, hidden_init)\n",
+    "\n",
+    "# 输出的第一个维度对应于 batch_size，也就是样本个数，第二个维度是隐藏层状态向量\n",
+    "output.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `RNN`的的使用\n",
+    "\n",
+    "`RNN`是对`RNNCell`的封装，它不仅可以处理序列，还可以堆叠多个RNN层，所以它的输入里有 sequence 这个维度。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RNN(8, 4, num_layers=2, bias=False, batch_first=True)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 构建一个 2层、单向 RNN\n",
+    "# 需要设置的 3 个参数：RNN层数=2，输入特征数=8，隐藏层状态向量长度=4\n",
+    "num_layers, in_features, hidden_size = 2, 8, 4\n",
+    "\n",
+    "rnn_layer = nn.RNN(input_size=in_features, hidden_size=hidden_size, num_layers=num_layers, \n",
+    "                   bidirectional=False, nonlinearity='tanh', bias=False, batch_first=True)\n",
+    "rnn_layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 6, 8])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 由数据决定的两个参数：batch_size=2，序列长度=6\n",
+    "batch_size, seq_length = 2, 6\n",
+    "\n",
     "# 输入的数据shape应当为 (batch_size, seq_length, in_features)\n",
-    "batch_size = 2\n",
-    "seq_length = 4\n",
     "rnn_data = torch.randn(batch_size, seq_length, in_features)\n",
     "rnn_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,24 +2046,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'tuple'>\n",
-      "2\n",
-      "torch.Size([2, 4, 3])\n",
-      "torch.Size([1, 2, 3])\n"
+      "<class 'tuple'> ,  2\n",
+      "torch.Size([2, 6, 4])\n",
+      "torch.Size([2, 2, 4])\n"
      ]
     }
    ],
    "source": [
     "# 结果是一个 长度=2 的tuple\n",
-    "print(rnn_result.__class__)\n",
-    "print(len(rnn_result))\n",
+    "print(rnn_result.__class__, ', ',len(rnn_result))\n",
     "\n",
     "# 第一个是 output，它的 shape = (batch_size, seq_length, hidden_size*num_directions)\n",
     "print(rnn_result[0].shape)\n",
@@ -2010,9 +2074,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ `LSTMCell`使用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `LSTM`层使用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Embedding层\n",
     "\n",
-    "给定一个 embedding 矩阵，给定一个词语的id，从这个词典中返回对应的 embedding.\n",
+    "用于存储词向量的lookup table。存放的是词向量的 embedding 矩阵，输入是一个词语的index，从这个词典中返回对应的 embedding.\n",
     "\n",
     "`nn.Embedding(num_embeddings, embedding_dim, padding_idx=None, max_norm=None, norm_type=2.0, scale_grad_by_freq=False, sparse=False, _weight=None)`\n",
     "\n",
@@ -2023,7 +2101,7 @@
     "\n",
     "\n",
     "+ 属性，只有如下一个属性\n",
-    "  + `.weight`, 学习到的 embedding 矩阵权重\n",
+    "  + `.weight`, 存储的 embedding 矩阵权重\n",
     "\n",
     "\n",
     "+ `forward()`方法\n",
@@ -2032,7 +2110,7 @@
     "\n",
     "\n",
     "+ `from_pretrained(embeddings, freeze=True, padding_idx=None, ...)`  \n",
-    "用于从一个给定的二维矩阵中创建 embedding 关系\n",
+    "用于从一个给定的二维矩阵中创建 embedding \n",
     "  + `embedding`，2-D tensor, `shape=(num_embeddings, embedding_num)`\n",
     "  + `freeze`\n",
     "  + `paddign_idx`"
@@ -2108,6 +2186,7 @@
     }
    ],
    "source": [
+    "# 输入1个批次，该batch有2个句子\n",
     "input_idx = torch.LongTensor([[0,2,4,0],[0, 2, 4, 8]])\n",
     "embedding_layer(input_idx)"
    ]
@@ -4141,96 +4220,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10000, 10, 1])\n",
-      "torch.Size([10000, 1])\n",
-      "torch.Size([1000, 10, 1])\n",
-      "torch.Size([1000, 1])\n"
+      "torch.Size([3000, 10, 1]) ,  torch.Size([3000, 1]) ,  torch.Size([500, 10, 1]) ,  torch.Size([500, 1])\n"
      ]
     }
    ],
    "source": [
-    "TRAINING_EXAMPLES = 10000\n",
-    "TESTING_EXAMPLES = 1000\n",
-    "SAMPLE_INTERVAL = 0.01*np.pi\n",
-    "TIME_STEPS = 10  # 序列的长度\n",
-    "\n",
     "# 构造数据集\n",
-    "# 需要注意的是，RNN输入数据的shape=(batch_size, time_steps, input_size)，特别要注意 time_steps 这个维度.\n",
+    "TRAINING_EXAMPLES, TESTING_EXAMPLES = 3000, 500\n",
+    "SAMPLE_INTERVAL, TIME_STEPS = 0.01*np.pi, 10\n",
+    "\n",
+    "\n",
     "def generate_data(seq):\n",
     "    \"\"\"\n",
-    "    从序列seq中进行采样，用 [第i项: TIME_STEPS-1项]作为输入值X， 第 i+TIMES_STEPS 项作为Y值\n",
+    "    从序列seq中进行采样，用 [i: i+TIME_STEPS-1] 作为输入值X， 第 i+TIMES_STEPS 项作为Y值.\n",
+    "    即用sin函数前面的 TIME_STEPS 个点的信息，预测第 i+TIME_STEPS 个点的函数值.\n",
+    "    样本数为 序列长度 - TIME_STEPS\n",
     "    \"\"\"\n",
-    "    X = []\n",
-    "    Y = []\n",
-    "    # 序列的第 i 项和后面的 TIME_STEPS-1 项合在一起作为输入；第 i + TIME_STEPS 项作为输出。\n",
-    "    # 即用sin函数前面的 TIME_STEPS 个点的信息，预测第 i + TIME_STEPS 个点的函数值。\n",
-    "    # 样本数为 序列长度 - TIME_STEPS\n",
+    "    X, Y = [], []\n",
+    "    # 样本数为：序列长度 - TIME_STEPS\n",
     "    for i in range(len(seq)-TIME_STEPS):\n",
-    "        # X.append([seq[i: (i+TIME_STEPS)]])\n",
-    "        # Y.append([seq[i+TIME_STEPS]])\n",
+    "        # 序列的 [i: TIME_STEPS-1 ] 子序列作为输入；第 i+TIME_STEPS 项作为输出\n",
     "        X.append(seq[i: (i+TIME_STEPS)])\n",
     "        Y.append(seq[i+TIME_STEPS])\n",
     "    return np.array(X, dtype=np.float32), np.array(Y, dtype=np.float32)\n",
     "\n",
-    "# 确定测试数据起点，这之前都是训练数据集：训练数据集的取值区间是 [0, test_start]，这中间取 TRAINING_EXAMPLES + TIME_STEPS 个点，\n",
-    "test_start = (TRAINING_EXAMPLES + TIME_STEPS) * SAMPLE_INTERVAL\n",
-    "# 确定测试数据集的终点：测试数据集的取值区间是 [test_start, test_end]， 这中间取 TESTING_EXAMPLES + TIME_STEPS 个点\n",
-    "test_end = test_start + (TESTING_EXAMPLES + TIME_STEPS) * SAMPLE_INTERVAL\n",
     "\n",
-    "sin_x_train = np.linspace(0, test_start, TRAINING_EXAMPLES + TIME_STEPS, dtype=np.float32)\n",
-    "sin_y_train = np.sin(sin_x_train)\n",
-    "sin_x_test = np.linspace(test_start, test_end, TESTING_EXAMPLES + TIME_STEPS, dtype=np.float32)\n",
-    "sin_y_test = np.sin(sin_x_test)\n",
+    "def generate_sin_dataset():\n",
+    "    # 确定测试数据起点，这之前都是训练数据集，训练数据集的取值区间是 [0, test_start]，这中间取 TRAINING_EXAMPLES + TIME_STEPS 个点，\n",
+    "    test_start = (TRAINING_EXAMPLES + TIME_STEPS) * SAMPLE_INTERVAL\n",
+    "    # 确定测试数据集的终点，测试数据集的取值区间是 [test_start, test_end]， 这中间取 TESTING_EXAMPLES + TIME_STEPS 个点\n",
+    "    test_end = test_start + (TESTING_EXAMPLES + TIME_STEPS) * SAMPLE_INTERVAL\n",
+    "    # 从 sin 中产生数据点\n",
+    "    sin_x_train = np.linspace(0, test_start, TRAINING_EXAMPLES + TIME_STEPS, dtype=np.float32)\n",
+    "    sin_y_train = np.sin(sin_x_train)\n",
+    "    sin_x_test = np.linspace(test_start, test_end, TESTING_EXAMPLES + TIME_STEPS, dtype=np.float32)\n",
+    "    sin_y_test = np.sin(sin_x_test)\n",
+    "    # 生成训练数据集\n",
+    "    # 注意，这里是要用sin值序列的 [i: TIME_STEPS-1] 项 预测 第 i+TIMES_STEPS 项，所以只需要 seq_train_y 值，不需要横坐标的值\n",
+    "    train_X, train_y = generate_data(sin_y_train)\n",
+    "    test_X, test_y = generate_data(sin_y_test)\n",
+    "    # 每个训练样本是一个长度(time_step)=10的 sequence，sequence中每个位置的值是一个长度=1的向量（也就是标量）\n",
+    "    train_X = train_X.reshape(TRAINING_EXAMPLES, TIME_STEPS, 1)\n",
+    "    train_y = train_y.reshape(TRAINING_EXAMPLES, 1)\n",
+    "    test_X = test_X.reshape(TESTING_EXAMPLES, TIME_STEPS, 1)\n",
+    "    test_y = test_y.reshape(TESTING_EXAMPLES, 1)\n",
+    "    # 训练样本数太大的话，下面转成tensor会报错\n",
+    "    train_X = torch.tensor(train_X)\n",
+    "    train_y = torch.tensor(train_y)\n",
+    "    test_X = torch.tensor(test_X)\n",
+    "    test_y = torch.tensor(test_y)\n",
+    "    return train_X, train_y, test_X, test_y\n",
     "\n",
-    "# 注意，这里是要用sin值序列的 第i项: TIME_STEPS-1 项 预测 第 i+TIMES_STEPS 项，所以只需要 sin_y_train值，不需要横坐标的值\n",
-    "train_X, train_y = generate_data(sin_y_train)\n",
-    "test_X, test_y = generate_data(sin_y_test)\n",
-    "\n",
-    "# 修改一下数据的 shape\n",
-    "train_X = train_X.reshape(TRAINING_EXAMPLES, TIME_STEPS, 1)\n",
-    "train_y = train_y.reshape(TRAINING_EXAMPLES, 1)\n",
-    "test_X = test_X.reshape(TESTING_EXAMPLES, TIME_STEPS, 1)\n",
-    "test_y = test_y.reshape(TESTING_EXAMPLES, 1)\n",
-    "\n",
-    "train_X = torch.tensor(train_X)\n",
-    "train_y = torch.tensor(train_y)\n",
-    "test_X = torch.tensor(test_X)\n",
-    "test_y = torch.tensor(test_y)\n",
-    "\n",
-    "# 一共10000个样本，每个训练样本是一个长度(time_step)=10的 sequence，sequence中每个位置的值是一个长度=1的向量（也就是标量）\n",
-    "print(train_X.shape)\n",
-    "print(train_y.shape)\n",
-    "print(test_X.shape)\n",
-    "print(test_y.shape)"
+    "train_X, train_y, test_X, test_y = generate_sin_dataset()\n",
+    "print(train_X.shape, ', ', train_y.shape, ', ', test_X.shape, ', ', test_y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([10000, 10, 5])\n",
-      "torch.Size([1, 10000, 5])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 测试一下数据和RNN\n",
     "# input_size=1，隐藏层是 长度=5 的向量，单层、单向 RNN\n",
     "rnn = nn.RNN(input_size=1, hidden_size=5, num_layers=1, bidirectional=False, nonlinearity='relu', bias=False, batch_first=True)\n",
     "\n",
-    "res = rnn(train_X)\n",
+    "res = rnn(test_X)\n",
     "# 输出层\n",
     "print(res[0].shape)\n",
     "# 隐藏层（状态层）\n",
@@ -4239,7 +4301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4247,7 +4309,8 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        # 单层、单向RNN，隐藏层向量维度 = 5\n",
-    "        self.rnn = nn.RNN(input_size=1, hidden_size=5, num_layers=1, nonlinearity='relu', bias=False, batch_first=True, bidirectional=False)\n",
+    "        self.rnn = nn.RNN(input_size=1, hidden_size=5, num_layers=1, nonlinearity='relu', bias=False, \n",
+    "                          batch_first=True, bidirectional=False)\n",
     "        # 将RNN的输出拉平\n",
     "        self.flatten = nn.Flatten()\n",
     "        # 最后用一个全连接层，将结果转成一个实数\n",
@@ -4385,7 +4448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 数据集加载处理"
+    "### 数据集加载处理"
    ]
   },
   {
@@ -4508,7 +4571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LSTM模型"
+    "### LSTM模型"
    ]
   },
   {
