--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -79,7 +79,8 @@
     "\n",
     "### 实例化参数\n",
     "`MultiheadAttention(embed_dim, num_heads, dropout=0.0, bias=True, add_bias_kv=False, add_zero_attn=False, kdim=None, vdim=None)`  \n",
-    "+ `embed_dim`，整个MHA的输入/输出特征维度。**原始论文里，MHA的输入/输出特征维度可以是不一样的，但是在Pytorch的实现里，强制要求它们是一样的**。\n",
+    "+ `embed_dim`，整个MHA的输入/输出特征维度。  \n",
+    "  **原始论文里，MHA的输入/输出特征维度可以是不一样的，但是在Pytorch的实现里，强制要求它们是一样的**（这个限制未来版本可能会取消）。\n",
     "+ `num_heads`，head数量，注意，分配到每个head的维度 = embed_dim/num_heads.\n",
     "+ `kdim`，自定义 key 中的特征维度，它是下面`forward()`方法里`key`对应的特征维度，默认下=`embed_dim`\n",
     "+ `vidm`，自定义 value 中的特征维度，`forward()`方法里`value`对应的特征维度，默认=`embed_dim`\n",
@@ -93,33 +94,50 @@
     "\n",
     "`MultiheadAttention.forward(query, key, value, key_padding_mask=None, need_weights=True, attn_mask=None)`\n",
     "+ `query`, `key`, `value`，MHA的三个输入矩阵——这三个输入向量会被用于生成对应的Q,K,V\n",
-    "  + `query.shape` = $(L, N, E)$，`key.shape` = $(S, N, E)$，`value.shape` = $(S, N, E)$.   \n",
-    "  其中 $N$ 是 batch size，$E$ 是 embedding 维度——**它必须等于实例化参数中的`embed_dim`**； $L$ 是**target**序列的长度——因为它决定了MHA输出的序列长度，$S$ 是**source**序列的长度。\n",
-    "  + Transformer中MHA会**在3个地方使用，这3个地方会影响query,key,value的内容**\n",
-    "    1. Encoder中，query,key,value都是来自于**样本的输入序列**，此时 $L=S$，`kdim == vdim`\n",
-    "    2. Decoder的 **Masked MHA** 中，query,key,value都来自于**样本的输出序列**，此时 $L=S$, `kdim == vdim`\n",
-    "    3. Decoder的 **decoder-encoder attention**中，query来自于**样本的输出序列**，key,value都是Encoder的输出，此时可能 $L\\neq S$, `kdim != vdim`\n",
+    "  + `query.shape` = $(L, N, E_q)$，`key.shape` = $(S, N, E_k)$，`value.shape` = $(S, N, E_v)$.   \n",
+    "    + $N$ 是 batch size\n",
+    "    + $E$ 是 embedding 维度，$E_q$=`embed_dim`, $E_k$=`kdim`, $E_v$=`vdim`\n",
+    "    + $L$ 是**target**序列的长度——因为它决定了MHA输出的序列长度\n",
+    "    + $S$ 是**source**序列的长度\n",
+    "  + Transformer中MHA会**在3个地方使用，这3个地方会影响 query, key, value 的内容**\n",
+    "    + Encoder中 query, key, value 都是来自于样本的**输入序列**，此时 $L=S$，`kdim == vdim`\n",
+    "    + Decoder的 **Masked MHA** 中 query, key, value 都来自于样本的**输出序列**，此时 $L=S$, `kdim == vdim`\n",
+    "    + Decoder的 **decoder-encoder attention**中，query 来自于样本的**输出序列**，key, value 都是**Encoder最后一层的输出**，此时可能 $L\\neq S$, `kdim != vdim`\n",
+    "  + **有关序列维度的说明**\n",
+    "    + 输入的 `query`, `key`, `value` 不是self-attention的输入，它们需要经过各自的投影矩阵 $W_Q \\in (E_q, E_q)$, $W_K \\in (E_d, E_k)$, $W_V \\in (E_d, E_v)$ 的转换，上面这3个参数矩阵的维度，就是MHA里初始化的维度\n",
+    "    + 线性投影过程如下（这里把batch的维度提前了）：   \n",
+    "    $q = query * W_Q^T \\in (N, L, E_d)$,   \n",
+    "    $k = key * W_K^T \\in (N, S, E_d)$,   \n",
+    "    $v = value * W_V^T \\in (N, S, E_d)$  \n",
+    "    + 可以看出，参数的 `kdim` 和 `vdim` 只是用于设置投影矩阵 $W_K, W_V$ 的维度，这两个矩阵的另一个维度被设置成了 $E_q$=`embed_dim`，经过上述三个投影矩阵的变换之后，`query`, `key`, `value` 的维度都变成了 $E_q$，也就是 `embed_dim`\n",
+    "    + 后续进行的MHA操作为：\n",
+    "    $$softmax(\\frac{q*k^T}{\\sqrt{E_d}}) * v$$\n",
+    "    $$((N, L, E_d) * (N, E_d, S)) * (N, S, E_d) \\rightarrow (N, L, E_d)$$\n",
+    "    调用的是`torch.bmm()`算子，会在每个批次上做上述操作。\n",
+    "    + 可以看出，最终决定输出序列长度的是 `query` 的序列长度 $L$，而 `key` 和 `value` 的序列长度必须一致，它们会在中间计算过程中相互抵消掉。\n",
     "\n",
     "\n",
     "+ `key_padding_mask`：填充位置的掩码，shape=$(N, S)$   \n",
     "  + 对于一个batch的训练数据来说，batch size 为 $N$ 表示有 $N$ 个序列，但是**每个序列的长度（也就是单词个数）是不一样的**，`key`,`value`中的 $S$ 都是指最长序列的长度，其他的序列就需要对缺少的单词位置做填充(padding)，padding位置的词通常使用全为0的embeding 来表示。   \n",
-    "  + 为了不让MHA对这些位置的词产生注意力，需要记录这些padding位置，每个batch都使用这样一个 $(N, S)$的矩阵来标识padding的位置，该矩阵的每一行对应batch中的一个序列，值为`[False, False, True, True]` 或者 `[0, 0, 1, 1]` 的形式，其中结尾`True`或者1标识的就是padding的位置。   \n",
-    "  + 需要注意的是，这里padding矩阵实际生效位置是在`query`和`key`做完矩阵乘法得到shape=$(N,L,S)$的中间矩阵 P 之后才使用的，由于只有`key`使用了padding掩码，只需要在$N$个序列中对$S$这一个维度标识padding位置即可，所以使用的padding矩阵shape=$(N,S)$. pytorch中的实现就是对中间矩阵 P 的$S$维度，按照 `[False,False,True,True]` 中的标记，对于`True`的位置赋值为`-inf`，从而在后续的softmax中，该位置得到的概率为0.\n",
+    "  + 为了不让MHA对这些位置的词产生注意力，需要记录这些padding位置，每个batch都使用这样一个 $(N, S)$ 的矩阵来标识padding的位置，该矩阵的每一行对应batch中的一个序列，值为`[False, False, True, True]` 或者 `[0, 0, 1, 1]` 的形式，其中结尾`True`或者1标识的就是padding的位置。   \n",
+    "  + 需要注意的是，这里padding矩阵实际生效位置是在`query`和`key`做完矩阵乘法得到shape=$(N,L,S)$的中间矩阵 P 之后才使用的，由于只有`key`使用了padding掩码，只需要在 $N$ 个序列中对 $S$ 这一个维度标识padding位置即可，所以使用的padding矩阵shape=$(N,S)$. pytorch中的实现就是对中间矩阵 P 的 $S$ 维度，按照 `[False,False,True,True]` 中的标记，对应`True`的位置赋值为`-inf`，从而在后续的softmax中，该位置得到的概率为0.\n",
     "\n",
     "\n",
-    "+ `attn_mask`，shape=$(N,L,S)$，**只在Decoder中使用**，主要是解码时不让当前位置的词和后面要预测的词序列进行Attention.   \n",
+    "+ `attn_mask`，**只在Decoder中使用**，主要是解码时不让当前位置的词和后面要预测的词序列进行Attention.   \n",
+    "  + shape=$(L,S)$ 或者 $(N * num\\_heads,L,S)$，如果是 2D 的矩阵，那么batch中的每个序列都会使用这个，如果是 3D 的矩阵，则会指定每个batch 的掩码\n",
     "  + 它的生效位置也是在`query`和`key`相乘得到shape=$(N,L,S)$的中间矩阵 P 之后使用，此时batch中**每个**序列的输入`query`部分（shape=$(L,E)$）和`key`部分（shape=$(S,E)$）相乘得到了一个 $(L,S)$ 的矩阵 P，矩阵中列表示`query`里的每个词，行表示`key`中的每个词，如果不想让`query`中第 $i$ 个词看到`key`中第 $j$ 个词之后的内容，只需要让 `P[i, j:]` 这部分为 `-inf` 即可，因此这个掩码的shape=$(N,L,S)$.\n",
     "  + 如果是在Decoder中的**Masked MHA**这里使用，此时输入的`query`,`key`,`value`都是来源于同一个地方，`query`和`key`维度相等，此时 P 是一个方阵，并且右上三角均为`-inf` —— 这是好理解的部分，也是正常它要解决的问题部分。\n",
     "  + 如果是在Decoder中的**encoder-decoder attention**层使用，此时输入的`query`是来自于之前的Masked MHA层，属于输出序列的内容，但是`key`,`value`是来自于Encoder，属于输入序列的内容，此时才会出现`query`和`key`长度不等的情况——这种情况下虽然也可以使用掩码，但是它的含义就不那么好解释了。\n",
     "\n",
     "\n",
-    "+ `need_weights`，bool，表示是否需要输出attention的weights\n",
+    "+ `need_weights`，bool，表示是否需要返回`attn_output_weigths`，默认为`True`\n",
     "\n",
     "\n",
     "+ `forward()`方法返回值\n",
-    "  + `attn_output`，shape= $(L, N, E)$，$L$ 由 输入的`query`序列长度决定，$E$ 由输入序列中每个word的特征维度确定\n",
+    "  + `attn_output`，shape= $(L, N, E_q)$，$L$ 由 输入的`query`序列长度决定，$E$=`embed_dim`.\n",
     "  + `attn_output_weights`，shape=$(N, L, S)$，这个权重应该是每个输入序列中，每个word的attention权重.\n",
     "  \n",
+    "\n",
     "### 一些说明\n",
     "\n",
     "Pytorch中的Multi-Head Attention的实现和论文《All you need is transformer》中有一些不一样的地方，总结如下：\n",
@@ -127,15 +145,15 @@
     "+ pytorch在实现MHA时，强制要求了输入的特征维度和输出的特征维度必须一致，也就是实例化时的`embed_dim`参数，但是在原论文中没有这个限制。   \n",
     "原论文中，输入的特征维度是`query`里的embed_dim，输出的特征维度由`value`的embed_dim决定。\n",
     "\n",
-    "+ pytorch中MHA实例化参数`kdim`,`vdim`和含义和原论文里的$d_k$, $d_v$不一样，如下所示.   \n",
-    "原论文中的$d_k$, $d_v$ 指的是query,key经过参数矩阵$W$变换之后的embed_dim，而pytoch中的`kdim`,`vdim`指定的是输入的`key`,`value`中，没有经过$W$变换之前的特征维度，对于经过$W$变换之后的embed_dim，pytorch强制规定了都必须为实例化参数时的`embed_dim`。\n",
+    "+ pytorch中MHA实例化参数 `kdim`,`vdim` 和含义和原论文里的 $d_k$, $d_v$ 不一样，如下所示.   \n",
+    "原论文中的 $d_k$, $d_v$ 指的是 query, key 经过参数矩阵 $W$ 变换之后的 embed_dim，而pytoch中的 `kdim`,`vdim` 指定的是输入的 `key`,`value` 中，没有经过 $W$ 变换之前的特征维度，$W$ 这个参数矩阵设置的时候，其中一个维度就是 `kdim` （或者 `vdim`），另一个维度就是 `embed_dim`，因此 `key`, `value` 经过 $W$ 变换之后，维度就变成了 `embed_dim` ——这是 pytorch强制规定的。\n",
     "\n",
     "<img src=\"images/multi-head-attention-formula.png\" width=\"60%\" align=\"left\">"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "47016bd0-03db-4a30-8d43-d93f1fa1ff6e",
+   "id": "4ff8b87b-8c61-4978-ae21-ad91a3dbed01",
    "metadata": {},
    "source": [
     "### 使用示例"
@@ -224,20 +242,21 @@
     "  + `d_model`，输入序列中，每个word的特征个数——它同时也决定了输出序列里每个word的特征个数\n",
     "  + `nhead`，multiheadattention中的head个数\n",
     "  + `dim_feedforward`，这个维度设置的是前馈神经网络的节点个数，前馈神经网络的输出节点数还是 `d_model`\n",
-    "  + `dropout`，dropout比例，默认 0.1\n",
+    "  + `dropout`，dropout比例，默认 0.1  \n",
     "\n",
-    "  \n",
+    "\n",
     "+ 前向传播`forward(src, src_mask=None, src_key_padding_mask=None)`\n",
     "  + `src`，输入的sequence, `shape` = $(S, N, E)$\n",
     "  + `src_mask`，输入sequence的mask\n",
-    "  + `src_key_padding_mask`，每个batch中src的padding矩阵\n",
-    "  \n",
-    "  \n",
+    "  + `src_key_padding_mask`，每个batch中src的padding矩阵  \n",
+    "\n",
+    "\n",
     "+ `forward()`方法返回值  \n",
     "  它返回的是和 `src` shape 相同的 tensor.\n",
     "\n",
     "\n",
-    "Encoder的内部只有**一层**`MultiheadAttention`：`Encoder.forward()`实际执行时，调用方式为`MultiheadAttention.forward(src, src, src)`——`src`会同时作为 query, key, value 传入 self-attention。\n",
+    "Encoder的内部只有**一层**`MultiheadAttention`：  \n",
+    "`Encoder.forward()`实际执行时，调用方式为`MultiheadAttention.forward(src, src, src)`——`src`会同时作为 query, key, value 传入 self-attention。\n",
     "\n",
     "\n",
     "\n",
@@ -442,50 +461,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crucial-logistics",
+   "id": "dc062e90-92af-4e49-a568-7291cf7e544e",
    "metadata": {},
    "source": [
     "----------------------------\n",
     "\n",
     "# Huggingface-Transformer\n",
     "\n",
-    "官方网站 [hugginface-transformer](https://huggingface.co/docs/transformers/index)\n",
+    "参考：\n",
+    "+ 官方网站 [huggingface-transformer](https://huggingface.co/docs/transformers/index)\n",
+    "+ github地址 [huggingface/transformers](https://github.com/huggingface/transformers)\n",
     "\n",
-    "这里介绍huggingface编写的transformer包，它里面基于transformer结构，实现了各种模型，包括BERT, DistilBERT, GPT2 等等.\n",
+    "这里介绍huggingface编写的transformer包，它里面基于transformer结构，实现了各种模型，包括BERT, DistilBERT, GPT2 等等.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a85d2c48-e3be-4d67-bddf-156b63a4b0d7",
+   "metadata": {},
+   "source": [
+    "## 基本框架\n",
     "\n",
-    "transformer 包里最重要的三个子模块是：\n",
+    "有关transformer包的设计理念可以参考官方文档 [Philosophy](https://huggingface.co/docs/transformers/philosophy).\n",
+    "\n",
+    "transformer 包为了保持简洁，尽量减少了抽象接口，每个模型只有3个必要的抽象部分，这里以NLP处理为例：\n",
+    "\n",
     "1. [Configuration](https://huggingface.co/transformers/main_classes/configuration.html)  \n",
-    "基础的类是 `PretrainedConfig`（好像也只有这一个类），用于封装各个模型所需要的参数配置，同时也可以方便的 **导出/导入** 参数配置。\n",
+    "基础的类是 `PretrainedConfig`（好像也只有这一个类），用于封装各个模型所需要的参数配置，同时也可以方便的 **导出/导入** 参数配置。  \n",
+    "不同的模型有自己的配置类，但是都是继承于此类。\n",
     "\n",
-    "2. [Tokenizer](https://huggingface.co/transformers/main_classes/tokenizer.html)  \n",
-    "包含两个基础的类，用于将文本特征转换成transformer能处理的序列特征：\n",
-    "   + `PreTrainedTokenizer`，这个比较慢\n",
-    "   + `PreTrainedTokenizerFast`，这个比较快\n",
-    "\n",
-    "\n",
-    "3. [Models](https://huggingface.co/transformers/main_classes/model.html)  \n",
+    "2. [Models](https://huggingface.co/transformers/main_classes/model.html)  \n",
     "基础的类有如下三个，用于构建模型：\n",
-    "   + `PreTrainedModel`，pytorch实现的模型都继承了这个类，继承了 `torch.nn.Module` 类.\n",
-    "   + `TFPreTrainedModel`，Tensorflow2.0实现的模型都继承了这个类，继承了 `tf.keras.Model` 类.\n",
+    "   + `PreTrainedModel`，pytorch实现的模型都继承了这个类，继承于 `torch.nn.Module` 类.\n",
+    "   + `TFPreTrainedModel`，Tensorflow2.0实现的模型都继承了这个类，继承于 `tf.keras.Model` 类.\n",
     "   + `FlaxPreTrainedModel`\n",
     "\n",
-    "  \n",
+    "\n",
+    "3. 预处理类，对于NLP任务来说是 [Tokenizer](https://huggingface.co/transformers/main_classes/tokenizer.html)  \n",
+    "包含两个基础的类，用于将文本特征转换成transformer能处理的序列特征：\n",
+    "   + `PreTrainedTokenizer`，这个是纯Python实现，速度比较慢\n",
+    "   + `PreTrainedTokenizerFast`，这个是基于Rust实现，速度比较快   \n",
+    "   \n",
+    "   对于视频或音频任务来说，是feature extrator类。\n",
+    "\n",
     "上面这三个基础模块，都有如下两个方法用于**导入/导出**对应的配置：\n",
-    "+ `.from_pretrained()`，导入预训练模型的 config/tokenizer/model\n",
+    "+ `.from_pretrained()`，导入预训练模型的 config/model/tokenizer\n",
     "  + `pretrained_model_name_or_path`，指定预训练模型的名称或者本地路径\n",
     "  + `cache_dir`，指定模型的缓存位置\n",
     "  + `force_download`，bool，指定是否强制下载模型\n",
     "  + `local_files_only`，bool，指定是否只使用本地模型\n",
     "  + `mirror`，指定下载的镜像地址\n",
-    "+ `.save_pretrained()`，导出训练好模型的 config/tokenizer/model\n",
+    "\n",
+    "\n",
+    "+ `.save_pretrained()`，导出训练好模型的 config/model/tokenizer\n",
     "\n",
     "**第一次使用这些语句的时候，如果本地没有对应的模型，会下载这些模型**。\n",
     "  \n",
     "在上面的3个基础子模块之上，还提供了如下几个子模块工具：\n",
     "\n",
-    "4. [Pipepline](https://huggingface.co/transformers/main_classes/pipelines.html)  \n",
+    "+ [Pipepline](https://huggingface.co/transformers/main_classes/pipelines.html)  \n",
     "用于快速使用模型，是对上面三个类的封装\n",
-    "5. [Trainer](https://huggingface.co/transformers/main_classes/trainer.html)  \n",
+    "+ [Trainer](https://huggingface.co/transformers/main_classes/trainer.html)  \n",
     "用于快速训练或者 fine-tune 模型\n",
     "\n",
     "\n",
@@ -497,6 +533,14 @@
     "+ **`tokenization_xxx.py`——KEY**，用于 分词的 实现类，比如BERT就是`BertTokenizer`类\n",
     "+ `tokenization_xxx_fast.py`，快速分词的实现类\n",
     "+ `convert_*.py`，用于将其它配置文件转换成对应的模型。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c332d6e1-dc72-4738-a48b-8de346e2dd3c",
+   "metadata": {},
+   "source": [
+    "## Configuration"
    ]
   },
   {
@@ -519,7 +563,10 @@
     "\n",
     "上述两个类又都是基于`PreTrainedTokenizerBase`类，该类实现了分词处理的主要方法，具体功能如下所示：\n",
     "  + 对文本进行分词，并将分词后的word映射到对应词典的id\n",
-    "  + 生成特殊的Tokens，比如mask等。"
+    "  + 生成特殊的Tokens，比如mask等。\n",
+    "  \n",
+    "  \n",
+    "有关 tokenizer 的使用，可以**参考官方教程 [Preprocessing -> NLP](https://huggingface.co/docs/transformers/preprocessing#nlp).**"
    ]
   },
   {
@@ -836,6 +883,8 @@
     "  + Distil-Bert模型（名称）有：\n",
     "    + distilbert-base-uncased\n",
     "    + distilbert-base-cased\n",
+    "  \n",
+    "  这些模型都比较大，可以提前下载下来。\n",
     "\n",
     "我一般常用的两个模型是 **BERT** 和 **Distil-BERT**，所以下面会着重关注这两个模型里的实现。\n",
     "\n",
@@ -1491,9 +1540,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataAnalysis(Python3.8.13)",
+   "display_name": "deep-learning(Python3.7.13)",
    "language": "python",
-   "name": "data-analysis"
+   "name": "deep-learning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1505,7 +1554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
