--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -20,7 +12,7 @@
       "package版本信息：\n",
       "numpy:       1.21.5\n",
       "pandas:      1.3.5\n",
-      "PyTorch:      1.12.1\n"
+      "PyTorch:      1.2.0\n"
      ]
     }
    ],
@@ -1627,7 +1619,7 @@
     "### 全连接层\n",
     "\n",
     "`nn.Linear(in_features: int, out_features: int, bias: bool = True)` .  \n",
-    "计算的是 $y=XW^T+b$，其中 $X$的维度是$batch\\_size \\times in\\_features$, $W$的维度是 $out\\_features \\times in\\_features$.\n",
+    "计算的是 $y=XW^T+b$，其中 $X$ 的维度是 `batch_size * in_features`, $W$ 的维度是 `out_features * in_features`.\n",
     "\n",
     "+ 初始化参数：\n",
     "  + `in_features`：**int**，输入数据的维度\n",
@@ -1649,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1658,11 +1650,11 @@
      "text": [
       "weight:\n",
       "Parameter containing:\n",
-      "tensor([[ 0.1275, -0.4422,  0.2409],\n",
-      "        [ 0.1011,  0.2749,  0.1577]], requires_grad=True)\n",
+      "tensor([[ 0.2310, -0.5083, -0.2356],\n",
+      "        [ 0.5234,  0.3355,  0.3892]], requires_grad=True)\n",
       "bias:\n",
       "Parameter containing:\n",
-      "tensor([-0.1225, -0.1347], requires_grad=True)\n"
+      "tensor([-0.1666,  0.2427], requires_grad=True)\n"
      ]
     }
    ],
@@ -1677,19 +1669,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-2.3011,  0.3329,  1.7874],\n",
-       "        [-0.3963,  0.6201, -0.1444],\n",
-       "        [ 1.4532,  1.7288, -0.6337],\n",
-       "        [ 1.1768,  0.4847,  2.3175]])"
+       "tensor([[ 0.1595, -0.6996, -0.2219],\n",
+       "        [ 0.7643,  0.9729, -1.0752],\n",
+       "        [ 0.2150,  1.3478, -1.5251],\n",
+       "        [-1.1034,  1.2223, -2.1040]])"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,25 +1693,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.1325,  0.0059],\n",
-       "        [-0.4821, -0.0270],\n",
-       "        [-0.8543,  0.3876],\n",
-       "        [ 0.3715,  0.4830]], grad_fn=<AddmmBackward>)"
+       "tensor([[ 0.2781,  0.0051],\n",
+       "        [-0.2313,  0.5506],\n",
+       "        [-0.4427,  0.2138],\n",
+       "        [-0.5470, -0.7437]], grad_fn=<AddmmBackward>)"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_out = linear_model(X)\n",
+    "y_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 多个维度时，以最后一个维度为准\n",
+    "X = torch.randn(2,4,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_out.shape:  torch.Size([2, 4, 2])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.3397, -0.0548],\n",
+       "         [ 0.2310, -0.9089],\n",
+       "         [-1.2867,  1.4118],\n",
+       "         [ 0.1485,  0.3098]],\n",
+       "\n",
+       "        [[ 1.0217, -0.2385],\n",
+       "         [-0.2242,  0.7461],\n",
+       "         [ 0.1227,  0.2403],\n",
+       "         [ 0.4385,  1.4845]]], grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_out = linear_model(X)\n",
+    "print('y_out.shape: ', y_out.shape)\n",
     "y_out"
    ]
   },
@@ -2090,22 +2129,22 @@
    "source": [
     "### Embedding层\n",
     "\n",
-    "用于存储词向量的lookup table。存放的是词向量的 embedding 矩阵，输入是一个词语的index，从这个词典中返回对应的 embedding.\n",
+    "用于存储词向量的lookup table，存放的是词向量的 embedding 矩阵，输入是一个词语的index，从这个词典中返回对应的 embedding.\n",
     "\n",
     "`nn.Embedding(num_embeddings, embedding_dim, padding_idx=None, max_norm=None, norm_type=2.0, scale_grad_by_freq=False, sparse=False, _weight=None)`\n",
     "\n",
     "+ 初始化参数\n",
-    "  + `num_embeddings`, int – 词典的大小尺寸，比如总共出现5000个词，那就输入5000。此时index为（0-4999）\n",
-    "  + `embedding_dim`, int – 嵌入向量的维度，即用多少维来表示一个符号。\n",
-    "  + `padding_idx`, int(optional) – 填充id，比如，输入长度为100，但是每次的句子长度并不一样，后面就需要用统一的数字填充，而这里就是指定这个数字，这样，网络在遇到填充id时，就不会计算其与其它符号的相关性。（初始化为0）\n",
+    "  + `num_embeddings`, int – 词典的大小尺寸，比如总共出现5000个词，那就输入5000，**此时index为（0-4999）**\n",
+    "  + `embedding_dim`, int – 嵌入向量的维度，即用多少维的向量来表示一个word。\n",
+    "  + `padding_idx`, int(optional) – 填充id，默认=0，比如，输入长度为100，但是每次的句子长度并不一样，后面就需要用统一的数字填充，而这里就是指定这个数字，这样，网络在遇到填充id时，就不会计算其与其它符号的相关性。\n",
     "\n",
     "\n",
     "+ 属性，只有如下一个属性\n",
-    "  + `.weight`, 存储的 embedding 矩阵权重\n",
+    "  + `.weight`, 存储的 embedding 矩阵权重，`shape=(num_embeddings, embedding_dim)`，也就是**每一行对应于一个单词**。\n",
     "\n",
     "\n",
     "+ `forward()`方法\n",
-    "  + 输入, 1-D tensor，指定 word 在词典中的idx\n",
+    "  + 输入, 1-D tensor，指定序列中的 word 在词典中的idx\n",
     "  + 输出, 2-D tensor，shape=`(*, H)`，$H$ 是 embedding 的维度.\n",
     "\n",
     "\n",
@@ -2118,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2141,18 +2180,18 @@
       "text/plain": [
        "Parameter containing:\n",
        "tensor([[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 2.8940, -0.5823, -0.5961, -2.1171],\n",
-       "        [ 0.3246, -1.4146, -0.6347,  0.5054],\n",
-       "        [-0.1479, -0.6522,  0.2994,  0.3771],\n",
-       "        [-0.5443,  0.8286, -0.4398,  0.8768],\n",
-       "        [-0.7140,  1.7932,  1.1160,  0.3064],\n",
-       "        [ 0.5092, -0.7065, -0.0336,  0.6674],\n",
-       "        [ 0.0946,  2.7504,  1.9101, -1.2813],\n",
-       "        [-0.4988,  0.8324, -0.8076, -1.5634],\n",
-       "        [-1.0803, -0.1018,  1.8713,  0.8305]], requires_grad=True)"
+       "        [ 0.2728, -0.5505, -0.3826,  0.4163],\n",
+       "        [ 1.0017, -0.2665, -1.0888,  1.2036],\n",
+       "        [-0.3417, -0.6724, -1.1274,  0.1802],\n",
+       "        [-0.1169,  1.6710, -1.1554, -1.1940],\n",
+       "        [ 1.2771, -1.0928,  0.9483, -0.9683],\n",
+       "        [-0.8431,  0.8336,  0.9197, -0.1194],\n",
+       "        [ 0.4564, -1.7891,  0.6424,  1.5855],\n",
+       "        [-0.4928,  0.8637,  0.0295, -1.2590],\n",
+       "        [-0.2398,  1.3869,  0.2918, -0.3044]], requires_grad=True)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,32 +2202,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "out_embedding.shape:  torch.Size([2, 6, 4])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
-       "         [ 0.3246, -1.4146, -0.6347,  0.5054],\n",
-       "         [-0.5443,  0.8286, -0.4398,  0.8768],\n",
+       "tensor([[[ 0.2728, -0.5505, -0.3826,  0.4163],\n",
+       "         [ 1.0017, -0.2665, -1.0888,  1.2036],\n",
+       "         [-0.1169,  1.6710, -1.1554, -1.1940],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000],\n",
        "         [ 0.0000,  0.0000,  0.0000,  0.0000]],\n",
        "\n",
-       "        [[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
-       "         [ 0.3246, -1.4146, -0.6347,  0.5054],\n",
-       "         [-0.5443,  0.8286, -0.4398,  0.8768],\n",
-       "         [-0.4988,  0.8324, -0.8076, -1.5634]]], grad_fn=<EmbeddingBackward>)"
+       "        [[-0.3417, -0.6724, -1.1274,  0.1802],\n",
+       "         [ 1.0017, -0.2665, -1.0888,  1.2036],\n",
+       "         [-0.1169,  1.6710, -1.1554, -1.1940],\n",
+       "         [-0.4928,  0.8637,  0.0295, -1.2590],\n",
+       "         [ 0.2728, -0.5505, -0.3826,  0.4163],\n",
+       "         [ 0.4564, -1.7891,  0.6424,  1.5855]]], grad_fn=<EmbeddingBackward>)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 输入1个批次，该batch有2个句子\n",
-    "input_idx = torch.LongTensor([[0,2,4,0],[0, 2, 4, 8]])\n",
-    "embedding_layer(input_idx)"
+    "# 输入 1 个 batch，该 batch 有 2 个句子，句子最大长度=6，第一个句子长度=3，后3位进行了padding\n",
+    "input_idx = torch.LongTensor([[1, 2, 4, 0, 0, 0], [3, 2, 4, 8, 1, 7]])\n",
+    "out_embedding = embedding_layer(input_idx)\n",
+    "print('out_embedding.shape: ', out_embedding.shape)\n",
+    "out_embedding"
    ]
   },
   {
@@ -4951,9 +5003,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow1.15]",
+   "display_name": "deep-learning(Python 3.7)",
    "language": "python",
-   "name": "conda-env-tensorflow1.15-py"
+   "name": "deep-learning"
   },
   "language_info": {
    "codemirror_mode": {
