--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "terminal-riding",
    "metadata": {},
    "outputs": [
@@ -12,9 +12,6 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.21.5\n",
-      "pandas:      1.3.4\n",
-      "matplotlib:  3.5.1\n",
-      "sklearn:     1.0.2\n",
       "PyTorch:      1.2.0\n"
      ]
     }
@@ -22,10 +19,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
-    "import matplotlib\n",
-    "import sklearn\n",
+    "# import matplotlib\n",
+    "# import sklearn\n",
     "import torch\n",
     "\n",
     "from torch import nn, optim\n",
@@ -35,9 +32,9 @@
     "\n",
     "print(\"package版本信息：\")\n",
     "print(\"numpy:      \", np.__version__)\n",
-    "print(\"pandas:     \", pd.__version__)\n",
-    "print(\"matplotlib: \", matplotlib.__version__)\n",
-    "print(\"sklearn:    \", sklearn.__version__)\n",
+    "# print(\"pandas:     \", pd.__version__)\n",
+    "# print(\"matplotlib: \", matplotlib.__version__)\n",
+    "# print(\"sklearn:    \", sklearn.__version__)\n",
     "print(\"PyTorch:     \", torch.__version__)"
    ]
   },
@@ -494,7 +491,7 @@
     "基础的类有如下三个，用于构建模型：\n",
     "   + `PreTrainedModel`，pytorch实现的模型都继承了这个类，继承于 `torch.nn.Module` 类.\n",
     "   + `TFPreTrainedModel`，Tensorflow2.0实现的模型都继承了这个类，继承于 `tf.keras.Model` 类.\n",
-    "   + `FlaxPreTrainedModel`\n",
+    "   + `FlaxPreTrainedModel`.  \n",
     "\n",
     "\n",
     "3. 预处理类，对于NLP任务来说是 [Tokenizer](https://huggingface.co/transformers/main_classes/tokenizer.html)  \n",
@@ -566,7 +563,9 @@
     "  + 生成特殊的Tokens，比如mask等。\n",
     "  \n",
     "  \n",
-    "有关 tokenizer 的使用，可以**参考官方教程 [Preprocessing -> NLP](https://huggingface.co/docs/transformers/preprocessing#nlp).**"
+    "有关 tokenizer 的使用，可以参考如下官方教程：\n",
+    "+ [Preprocessing -> NLP](https://huggingface.co/docs/transformers/preprocessing#nlp)\n",
+    "+ [Glossary -> Model inputs](https://huggingface.co/docs/transformers/glossary#model-inputs)"
    ]
   },
   {
@@ -598,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc095479-810f-4371-a605-a16c539892a2",
+   "id": "f29397f8-88b2-49c1-8ef2-27a57cfe868e",
    "metadata": {},
    "source": [
     "### 使用Tokenizer\n",
@@ -632,9 +631,14 @@
     "  + `input_ids`，分词后每个 token 对应 vocabulary 的 index —— 这个被**作为输入模型的数据**.\n",
     "  + `attention_mask`，表明填充的 token 位置，**填充位的 token 对应于 0**.  \n",
     "  因为一个batch中不同的句子长度不一样，短一些的句子会被padding成同样的长度，此时这些padding的位置需要被记录下来，用于告知模型这部分只是填充使用，不需要参与self-attention。\n",
-    "  + `token_type_ids`：通常用于问答对的句子中，它也是一个{0,1}掩码的形式，0表示属于问题的句子，1表示属于答案的句子\n",
-    "\n",
-    "\n",
+    "  + `token_type_ids`：通常用于问答对的句子中，它也是一个{0,1}掩码的形式，0表示属于问题的句子，1表示属于答案的句子"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d4a86fd-9ece-4273-aeeb-3f1e31ab5552",
+   "metadata": {},
+   "source": [
     "#### `tokenize()`\n",
     "将文本转换成分词后的 tokens，返回的是 `List[str]`，表示的是文本对应 **分词后** 的 tokens .\n",
     "\n",
@@ -667,24 +671,45 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "insured-place",
+   "id": "6e5ceb1c-c54d-4398-9323-d37ef43e46fb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Projects\\DataAnalysis\n"
+      "D:\\Project-Workspace\\Python-Projects\\DataAnalysis\n"
      ]
     }
    ],
    "source": [
-    "cd D:\\Projects\\DataAnalysis"
+    "cd .."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "insured-place",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "cdc19405-01f0-4f7d-9f4e-da2cab7c115a",
    "metadata": {},
    "outputs": [
@@ -692,21 +717,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Anaconda3\\envs\\tensorflow1.15\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "D:\\Miniconda3\\envs\\deep-learning\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "The cache for model files in Transformers v4.22.0 has been updated. Migrating your old cache. This is a one-time only operation. You can interrupt this and resume the migration later on by calling `transformers.utils.move_cache()`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moving 0 files to the new cache system\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
      ]
     }
    ],
    "source": [
     "# 导入 BERT tokenizer 的设置\n",
     "from transformers import BertTokenizer\n",
-    "model_path = r\"BERT\\bert-pre-trained-models\\bert-base-uncased\"\n",
+    "model_path = r\"bert-pretrained-models\\bert-base-uncased\"\n",
     "tokenizer = BertTokenizer.from_pretrained(pretrained_model_name_or_path=model_path, local_files_only=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "eaf330e3-c290-487a-998c-0aa5283dc1ca",
    "metadata": {},
    "outputs": [
@@ -727,17 +767,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "558bdd8f-dc26-470a-979e-67472fdf8bb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<transformers.models.bert.tokenization_bert.BasicTokenizer at 0x214ea688bc8>"
+       "<transformers.models.bert.tokenization_bert.BasicTokenizer at 0x1e642f8ab48>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "c0b9056f-154d-46b1-aeea-81d0b9b00355",
    "metadata": {},
    "outputs": [
@@ -772,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "fb467534-a310-4669-86ab-9c0484d106d0",
    "metadata": {},
    "outputs": [
@@ -804,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "9a063a11-2daf-4f94-a093-3e58b0e1ca34",
    "metadata": {},
    "outputs": [
@@ -828,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "conscious-polls",
    "metadata": {},
    "outputs": [
@@ -860,8 +900,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recreational-beijing",
-   "metadata": {},
+   "id": "53b661f1-b46f-4ad2-8e76-b9b323f14f64",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "-----------------\n",
     "\n",
@@ -879,30 +921,40 @@
     "    + bert-base-cased\n",
     "    + bert-large-uncased\n",
     "    + bert-large-cased\n",
-    "    + bert-base-chinese\n",
+    "    + bert-base-chinese  \n",
+    "    \n",
     "  + Distil-Bert模型（名称）有：\n",
     "    + distilbert-base-uncased\n",
     "    + distilbert-base-cased\n",
     "  \n",
     "  这些模型都比较大，可以提前下载下来。\n",
     "\n",
-    "我一般常用的两个模型是 **BERT** 和 **Distil-BERT**，所以下面会着重关注这两个模型里的实现。\n",
+    "我一般常用的两个模型是 **BERT** 和 **Distil-BERT**，所以下面会着重关注这两个模型里的实现。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92032d02-a793-406e-980c-96a48711b739",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### BERT 模型\n",
+    "[BERT Models](https://huggingface.co/transformers/model_doc/bert.html) 包含如下类（以pytorch为例）\n",
+    "+ `BertConfig`，配置类.  \n",
+    "位于`configuration_bert.py`文件中，该文件中也只有这一个配置类\n",
+    "+ `BertTokenizer`，实现 `WordPiece` 分词的类.  \n",
+    "位于`tokenization_bert.py`文件中，该文件中还有 `BasicTokenizer` 和 `WordpieceTokenizer` 两个类，不过`BertTokenizer`会调用它们.\n",
+    "+ `BertForPreTrainingOutput`，记录BERT模型的输出.\n",
+    "+ `BertModel`，最基本的 BERT 模型类，它返回的是 BERT 模型的原始结果，包括隐藏层状态.\n",
+    "+ `BertForPreTraining`，在 `BertModel`的输出上加了一层处理，以下的几个模型都是如此.\n",
+    "+ `BertForMaskedLM`\n",
+    "+ `BertForNextSentencePrediction`\n",
+    "+ `BertForSequenceClassification`\n",
+    "+ 还有其他的一些基础工具类和其他任务对于的BERT模型类，这里就不介绍了。   \n",
     "\n",
-    "+ [BERT Models](https://huggingface.co/transformers/model_doc/bert.html) 包含如下类（以pytorch为例）\n",
-    "  + `BertConfig`，配置类.  \n",
-    "  位于`configuration_bert.py`文件中，该文件中也只有这一个配置类\n",
-    "  + `BertTokenizer`，实现 `WordPiece` 分词的类.  \n",
-    "  位于`tokenization_bert.py`文件中，该文件中还有 `BasicTokenizer` 和 `WordpieceTokenizer` 两个类，不过`BertTokenizer`会调用它们.\n",
-    "  + `BertModel`，最基本的 BERT 模型类，它返回的是 BERT 模型的原始结果，包括隐藏层状态.\n",
-    "  + `BertForPreTraining`，在 `BertModel`的输出上加了一层处理，以下的几个模型都是如此.\n",
-    "  + `BertForMaskedLM`\n",
-    "  + `BertForNextSentencePrediction`\n",
-    "  + `BertForSequenceClassification`\n",
-    "  + 还有其他的一些基础工具类和其他任务对于的BERT模型类，这里就不介绍了。\n",
-    "  \n",
-    "\n",
-    "+ [DistilBERT Models](https://huggingface.co/transformers/model_doc/distilbert.html) 包含如下类:   \n",
-    "  ....略\n"
+    "注意：\n",
+    "> huaggingface-transformer 里，**并没有使用pytorch内部提供的nn.Transformer相关的模型，而是自己重新写了一套实现逻辑**."
    ]
   },
   {
@@ -910,9 +962,17 @@
    "id": "dedicated-senator",
    "metadata": {},
    "source": [
-    "### BertModel\n",
+    "#### BertModel\n",
     "\n",
     "最基本的BERT架构，输出的是最原始的BERT encoder 状态，没有添加任何多余的层.\n",
+    "\n",
+    "查看源码时，会发现它的初始化方法里，有3个层：\n",
+    "1. `self.embeddings = BertEmbeddings(config)`  \n",
+    "这一层用于将输入的input_ids转成对应的词向量，底层调用的是`nn.Embedding`\n",
+    "2. `self.encoder = BertEncoder(config)`  \n",
+    "这一层内部是`self.layer = nn.ModuleList([BertLayer(config) for _ in range(config.num_hidden_layers)])`，其中的`BertLayer`\n",
+    "3. `self.pooler = BertPooler(config) if add_pooling_layer else None`\n",
+    "\n",
     "\n",
     "+ `forward(input_ids=None, attention_mask=None, token_type_ids=None, position_ids=None, head_mask=None, inputs_embeds=None, encoder_hidden_states=None, encoder_attention_mask=None, past_key_values=None, use_cache=None, output_attentions=None, output_hidden_states=None, return_dict=None)`方法\n",
     "\n",
@@ -1332,7 +1392,7 @@
    "id": "swiss-trailer",
    "metadata": {},
    "source": [
-    "### BertForPreTraining\n",
+    "#### BertForPreTraining\n",
     "\n",
     "在 BertModel 的输出后，增加了一层 `BertPreTrainingHeads()`，如果要自己训练一个BERT模型，从这个类出发比较方便.\n",
     "\n",
@@ -1516,7 +1576,7 @@
    "id": "environmental-retreat",
    "metadata": {},
    "source": [
-    "### BertForSequenceClassification\n",
+    "#### BertForSequenceClassification\n",
     "\n",
     "这个类专门用于 序列分类，它的内部很简单：\n",
     "1. `BertModel()` 输出 pooled_output(`[CLS]` token 对应的 hidden_state)\n",
@@ -1530,9 +1590,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc1ce60a-505d-42d4-8119-2bc8a09da311",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Distil-BERT 模型\n",
+    "\n",
+    "[DistilBERT Models](https://huggingface.co/transformers/model_doc/distilbert.html) 包含如下类:   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "crucial-there",
+   "id": "e5a234ad-d58a-4841-94cb-0e9346887e4d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1540,7 +1612,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-learning(Python3.7.13)",
+   "display_name": "deep-learning(Python 3.7)",
    "language": "python",
    "name": "deep-learning"
   },
