--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
       "package版本信息：\n",
       "numpy:       1.21.5\n",
       "pandas:      1.3.5\n",
-      "PyTorch:      1.2.0\n"
+      "PyTorch:      1.12.1\n"
      ]
     }
    ],
@@ -2241,6 +2241,351 @@
     "out_embedding = embedding_layer(input_idx)\n",
     "print('out_embedding.shape: ', out_embedding.shape)\n",
     "out_embedding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Batch-Normalization层\n",
+    "\n",
+    "对于 BatchNorm 提供了如下3个类：\n",
+    "+ `nn.BatchNorm1d(num_features, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True, device=None, dtype=None)`  \n",
+    "+ `nn.BatchNorm2d(num_features, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True, device=None, dtype=None)`  \n",
+    "+ `nn.BatchNorm3d(num_features, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True, device=None, dtype=None)`\n",
+    "\n",
+    "公式为：\n",
+    "$$y=\\frac{x - {\\rm E}[x]}{\\sqrt{ {\\rm Var[x]} + \\epsilon}} * \\gamma + \\beta$$\n",
+    "其中 `eps` = $\\epsilon$，是为了保持数值计算的稳定性的，一般默认即可；  \n",
+    "`affine`=True 表示使用 $\\gamma$ 和 $\\beta$ 进行仿射变换，默认会使用，因为这是原始论文中的做法.  \n",
+    "\n",
+    "上述3个类的输入与输出的shape都是一样的：\n",
+    "+ 对于 1D 来说，输入为 shape=(N,C) 或者 (N,C,L)，N 为batch size, C 为 `num_features`，L 为 sequence length（可选），normalization时计算的是 C 这个维度的均值和标准差统计量，也就是计算 (N, L) 这个 slice 的统计量\n",
+    "+ 对于 2D 来说，输入为 shape=(N,C,H,W)，2D 指的就是后面的两个维度 (H,W)，同样计算的是 C 这个维度的统计量，也就是计算 (N,H,W) 这个 slice 的统计量，下同\n",
+    "+ 对于 3D 来说，输入为 shape=(N,C,D,H,W)，3D 指的就是后面的三个维度 (D,H,W)\n",
+    "\n",
+    "> batch-normalization的位置是本层神经元的输入，并且必须要在激活函数之前执行，它是对一个 batch 中的 每个特征（也就是对应于该层的同一个神经元） 独立的进行规范化。\n",
+    "\n",
+    "BN中，每个 batch 都会计算一个方差和均值，用于当前 batch 的规范化，`tracking_running_stats=True` 时，这些均值和方差**序列**（长度为batch的个数）会被记录下来，**均值序列的均值**和**方差序列的均值** 会被作为BN推理过程中的均值和方差的估计，用于规范化测试数据。  \n",
+    "如果设置为 `tracking_running_stats=False`，那么推理过程中，会使用测试数据的均值和方差。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn import BatchNorm1d, BatchNorm2d, BatchNorm3d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2., 3.],\n",
+      "        [3., 6., 9.]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.0000, -1.0000, -1.0000],\n",
+       "        [ 1.0000,  1.0000,  1.0000]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# batch size = 2, 特征数目=3\n",
+    "bn1d = BatchNorm1d(num_features=3, affine=False)\n",
+    "\n",
+    "x = torch.tensor([\n",
+    "    [1, 2, 3], \n",
+    "    [3, 6, 9]\n",
+    "], dtype=torch.float)\n",
+    "print(x)\n",
+    "\n",
+    "# 该 batch 中，2 个样本的 3 个 特征各自计算方差和均值，然后执行标准化，可以看出，每一列的均值=0\n",
+    "bn1d(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 2, 2])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[-1.0000, -1.0000],\n",
+       "          [-1.0000, -1.0000]],\n",
+       "\n",
+       "         [[-1.0000, -1.0000],\n",
+       "          [-1.0000, -1.0000]],\n",
+       "\n",
+       "         [[-1.0000, -1.0000],\n",
+       "          [-1.0000, -1.0000]]],\n",
+       "\n",
+       "\n",
+       "        [[[ 1.0000,  1.0000],\n",
+       "          [ 1.0000,  1.0000]],\n",
+       "\n",
+       "         [[ 1.0000,  1.0000],\n",
+       "          [ 1.0000,  1.0000]],\n",
+       "\n",
+       "         [[ 1.0000,  1.0000],\n",
+       "          [ 1.0000,  1.0000]]]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# batch size = 2, 特征数目=3, 但是多了一个维度\n",
+    "bn2d = BatchNorm2d(num_features=3, affine=False)\n",
+    "\n",
+    "x = torch.tensor([\n",
+    "    [ [[1,1],[1,1]],  [[2,2],[2,2]],  [[3,3],[3,3]] ], \n",
+    "    [ [[3,3],[3,3]],  [[6,6],[6,6]],  [[9,9],[9,9]] ]\n",
+    "], dtype=torch.float)\n",
+    "print(x.shape)\n",
+    "# print(x)\n",
+    "\n",
+    "# 该 batch 中，2 个样本的 3 个 特征各自计算方差和均值，然后执行标准化，可以看出，每一列的均值=0\n",
+    "bn2d(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Layer-Normalization层\n",
+    "\n",
+    "对于 LayerNorm，提供了`nn.LayerNorm(normalized_shape, eps=1e-05, elementwise_affine=True, device=None, dtype=None)`类。\n",
+    "Layer-normalization 是针对**单个样本**进行的规范化，它会计算单个样本中，**所有特征**的均值和方差，然后用来规范化该样本的所有特征，**规范化时使用的公式和BN一样，也带有仿射变换**。\n",
+    "\n",
+    "+ 参数：\n",
+    "  + `normalized_shape`：规范化的shape\n",
+    "  + `eps`：也用于保持数值计算的稳定性\n",
+    "  + `elementwise_affine`：是否进行仿射变换，默认True\n",
+    "  \n",
+    "+ 输入/输出：shape一样，都是 (N, *)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.shape:  torch.Size([2, 3, 2])\n",
+      "tensor([[[1., 1.],\n",
+      "         [2., 2.],\n",
+      "         [3., 3.]],\n",
+      "\n",
+      "        [[1., 2.],\n",
+      "         [2., 3.],\n",
+      "         [3., 4.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch, sentence_length, embedding_dim = 4, 3, 2\n",
+    "\n",
+    "# x = torch.randn(batch, sentence_length, embedding_dim)\n",
+    "# x 中注释掉任一个样本，对其他样本的结果没有影响\n",
+    "x = torch.tensor([\n",
+    "    [ [1,1], [2,2], [3,3] ],\n",
+    "    [ [1,2], [2,3], [3,4] ],\n",
+    "    # [ [1,3], [2,4], [3,5] ],\n",
+    "    # [ [2,4], [3,6], [4,8] ],\n",
+    "], dtype=torch.float)\n",
+    "\n",
+    "print('x.shape: ', x.shape)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 传入单个维度\n",
+    "计算的是 每个样本中，embedding_dim 这个维度的所有特征的规范化。  \n",
+    "比如第一个样本的 `[1,1]` ，计算均值和方差，再做标准化后为 `[0,0]`，第二个样本的 `[1,2]` 标准化为 `[-1,1]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.0000,  0.0000],\n",
+       "         [ 0.0000,  0.0000],\n",
+       "         [ 0.0000,  0.0000]],\n",
+       "\n",
+       "        [[-1.0000,  1.0000],\n",
+       "         [-1.0000,  1.0000],\n",
+       "         [-1.0000,  1.0000]]], grad_fn=<NativeLayerNormBackward0>)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layer_norm = nn.LayerNorm(embedding_dim)\n",
+    "layer_norm(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 传入多个维度\n",
+    "\n",
+    "此时计算的是 每个样本中，(sentence_length, embedding_dim) 这两个维度 所有特征的规范化。   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-1.2247, -1.2247],\n",
+       "         [ 0.0000,  0.0000],\n",
+       "         [ 1.2247,  1.2247]],\n",
+       "\n",
+       "        [[-1.5667, -0.5222],\n",
+       "         [-0.5222,  0.5222],\n",
+       "         [ 0.5222,  1.5667]]], grad_fn=<NativeLayerNormBackward0>)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layer_norm = nn.LayerNorm([sentence_length, embedding_dim])\n",
+    "layer_norm(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以第一个样本为例，上面的计算相当于："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.22474487, -1.22474487,  0.        ,  0.        ,  1.22474487,\n",
+       "        1.22474487])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 收集 sentence_length, embedding_dim 这两个维度的 slice 所有的元素，计算均值和方差，再做标准化\n",
+    "a = np.array([1,1,2,2,3,3])\n",
+    "(a-a.mean())/a.std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dropout层\n",
+    "\n",
+    "`nn.Dropout(p=0.5, inplace=False)`.\n",
+    "\n",
+    "底层调用的是`functional.dropout()`函数.\n",
+    "\n",
+    "根据概率`p`，对于输入tensor里的各个元素，随机赋值为0，剩余的元素会乘以缩放系数 $\\frac{1}{1-p}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn import Dropout\n",
+    "\n",
+    "dropout = Dropout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2., 3.],\n",
+      "        [3., 6., 9.]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.,  0.,  6.],\n",
+       "        [ 6., 12.,  0.]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor([\n",
+    "    [1, 2, 3], \n",
+    "    [3, 6, 9]\n",
+    "], dtype=torch.float)\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "dropout(x)"
    ]
   },
   {
@@ -5003,7 +5348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-learning(Python 3.7)",
+   "display_name": "deep-learning(Python3.7.13)",
    "language": "python",
    "name": "deep-learning"
   },
