--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -108,7 +108,7 @@
     "    $v = value * W_V^T \\in (N, S, E_d)$  \n",
     "    + 可以看出，参数的 `kdim` 和 `vdim` 只是用于设置投影矩阵 $W_K, W_V$ 的维度，这两个矩阵的另一个维度被设置成了 $E_q$=`embed_dim`，经过上述三个投影矩阵的变换之后，`query`, `key`, `value` 的维度都变成了 $E_q$，也就是 `embed_dim`\n",
     "    + 后续进行的MHA操作为：\n",
-    "    $$softmax(\\frac{q*k^T}{\\sqrt{E_d}}) * v$$\n",
+    "    $${\\rm softmax}(\\frac{q*k^T}{\\sqrt{E_d}}) * v$$\n",
     "    $$((N, L, E_d) * (N, E_d, S)) * (N, S, E_d) \\rightarrow (N, L, E_d)$$\n",
     "    调用的是`torch.bmm()`算子，会在每个批次上做上述操作。\n",
     "    + 可以看出，最终决定输出序列长度的是 `query` 的序列长度 $L$，而 `key` 和 `value` 的序列长度必须一致，它们会在中间计算过程中相互抵消掉。\n",
@@ -959,12 +959,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17e9b179-2e30-469d-94e4-abdef55e8787",
+   "metadata": {},
+   "source": [
+    "#### 底层实现类\n",
+    "\n",
+    "huggingface-transformer的实现里，除了上述几个可以直接用于任务的模型类之外，还有一些底层的实现类没有对外暴露，这些实现类是上述模型的基础。\n",
+    "\n",
+    "+ `BertEmbeddings`：用于将输入的 input_ids 转成词向量\n",
+    "+ `BertSelfAttention`：实现transformer的 self-attention 操作，也就是 ${\\rm softmax}(\\frac{ {\\rm query} * {\\rm key}^T}{\\sqrt{d_k}} * {\\rm value})$ 这一部分\n",
+    "+ `BertSelfOutput`：实现transformer里的 self-attention 之后的 LayerNorm(output + Feedfoward(output)) 操作\n",
+    "+ `BertAttention`：封装了 `BertSelfAttention` + `BertSelfOutput`，构成 transformer 里的单独一层\n",
+    "+ `BertIntermediate`: 内部是一个 linear 层 + 激活函数\n",
+    "+ `BertOutput`：这个和 `BertSelfOutput` 似乎没什么区别\n",
+    "+ **`BertLayer`**-KEY：封装了 `BertAttention` + `BertIntermediate` + `BertOutput`，这个类比较重要.  \n",
+    "  它提供了如下两个参数：\n",
+    "  + `config.is_decoder`：为 True 时，作为 decoder 使用，输出 decoder 的结果，否则作为 encoder 使用，输出 encoder 的隐藏层状态\n",
+    "  + `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层，用于 Seq2Seq 模型中\n",
+    "+ `BertEncoder`：内部是多个 `BertLayer` 层\n",
+    "+ `BertPooler`：内部是一个 全连接层 + tanh激活函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dedicated-senator",
    "metadata": {},
    "source": [
     "#### BertModel\n",
     "\n",
-    "最基本的BERT架构，输出的是最原始的BERT encoder 状态，没有添加任何多余的层.\n",
+    "最基本的BERT架构，既可以作为 transformer-encoder使用，也可以作为 transformer-decoder 使用，输出原始的隐藏层状态。\n",
     "\n",
     "查看源码时，会发现它的初始化方法里，有3个层：\n",
     "1. `self.embeddings = BertEmbeddings(config)`  \n",
@@ -974,7 +997,27 @@
     "3. `self.pooler = BertPooler(config) if add_pooling_layer else None`\n",
     "\n",
     "\n",
-    "+ `forward(input_ids=None, attention_mask=None, token_type_ids=None, position_ids=None, head_mask=None, inputs_embeds=None, encoder_hidden_states=None, encoder_attention_mask=None, past_key_values=None, use_cache=None, output_attentions=None, output_hidden_states=None, return_dict=None)`方法\n",
+    "+ 初始化的一些重要参数：\n",
+    "  + `is_decoder`\n",
+    "  + `add_cross_attention`\n",
+    "  + `add_pooling_layer`，是否添加最后的 `BertPooler` 层，默认为True\n",
+    "  \n",
+    "  上述参数中，除了`add_pooling_layer`，其他参数都是封装在 `BertConfig` 类中的。\n",
+    "\n",
+    "\n",
+    "+ 前向传播方法：  \n",
+    "`forward(input_ids=None, attention_mask=None, token_type_ids=None, position_ids=None, head_mask=None, inputs_embeds=None, encoder_hidden_states=None, encoder_attention_mask=None, past_key_values=None, use_cache=None, output_attentions=None, output_hidden_states=None, return_dict=None)`\n",
+    "  + input_ids\n",
+    "  + attention_mask\n",
+    "  + token_type_ids\n",
+    "  + position_ids\n",
+    "  + head_mask\n",
+    "  + inputs_embeds\n",
+    "  + encoder_hidden_states\n",
+    "  + encoder_attention_mask\n",
+    "  + past_key_values\n",
+    "  + output_attentions\n",
+    "  + output_hidden_states\n",
     "\n",
     "+ `forward()`方法返回的是`BaseModelOutputWithPoolingAndCrossAttentions`类对象（在`return_dict=True`时），它有如下属性：\n",
     "  + `last_hidden_state`，shape=`(batch_size, sequence_length, hidden_size)`，最后一层的隐状态\n",
@@ -1612,7 +1655,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-learning(Python3.7.13)",
+   "display_name": "deep-learning(Python 3.7)",
    "language": "python",
    "name": "deep-learning"
   },
